tests/negative/typecheck/index_product.orng
// index_product.orng:7:7: error: not a constant integer
//     x[f()]
//      ^
// 
fn main() -> Int {
    let x: (Int, Char, Bool, Int)
    x[f()]
}

fn f() -> Int { 3 }